# SimpleLANSocket

./: .gitignore  CMakeLists.txt
Include/: JTCPProtocol.h  JostickTCPClient.h  JostickTCPServer.h  UDPClientReciver.h  UDPServerDiscoverer.h
Source/: JTCPProtocol.cpp  JostickTCPClient.cpp  JostickTCPSrever.cpp  UDPSeverDiscoverer.cpp
